--- a/Note/en.lproj/MainStoryboard.storyboard
+++ b/Note/en.lproj/MainStoryboard.storyboard
@@ -8,22 +8,25 @@
         <scene sceneID="4">
             <objects>
                 <viewController id="2" customClass="ViewController" sceneMemberID="viewController">
-                    <imageView key="view" userInteractionEnabled="NO" contentMode="scaleToFill" image="Default-568h@2x.png" id="uup-TL-lFW">
-                        <rect key="frame" x="0.0" y="20" width="768" height="1004"/>
+                    <imageView key="view" userInteractionEnabled="NO" contentMode="scaleToFill" id="uup-TL-lFW">
+                        <rect key="frame" x="0.0" y="20" width="1024" height="748"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     </imageView>
+                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="blackTranslucent"/>
+                    <nil key="simulatedTopBarMetrics"/>
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
                     <connections>
                         <outlet property="test" destination="uup-TL-lFW" id="s7k-N8-lgB"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="8" y="-122"/>
+            <point key="canvasLocation" x="-112" y="-36"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="Default-568h@2x.png" width="640" height="1136"/>
-    </resources>
     <classes>
         <class className="ViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
