--- a/Note/en.lproj/MainStoryboard.storyboard
+++ b/Note/en.lproj/MainStoryboard.storyboard
@@ -7,22 +7,14 @@
         <!--View Controller-->
         <scene sceneID="4">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3" sceneMemberID="firstResponder"/>
                 <viewController id="2" customClass="ViewController" sceneMemberID="viewController">
-                    <imageView key="view" userInteractionEnabled="NO" contentMode="scaleToFill" id="uup-TL-lFW">
-                        <rect key="frame" x="0.0" y="20" width="1024" height="748"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
-                    </imageView>
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="blackTranslucent"/>
                     <nil key="simulatedTopBarMetrics"/>
                     <nil key="simulatedBottomBarMetrics"/>
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
-                    <connections>
-                        <outlet property="test" destination="uup-TL-lFW" id="s7k-N8-lgB"/>
-                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="3" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-192" y="-124"/>
         </scene>
@@ -31,7 +23,8 @@
         <class className="ViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
             <relationships>
-                <relationship kind="outlet" name="test" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="Ubackground" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="advanceControlScheme" candidateClass="UIView"/>
             </relationships>
         </class>
     </classes>
